--- a/Xmas-Installer/MainWindow.xaml
+++ b/Xmas-Installer/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Xmas_Installer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" WindowStyle="None">
+        Title="MainWindow" Height="350" Width="525" WindowStyle="None" Background="Black">
     <Grid>
         
-    </Grid>
+		<local:ProgressRing x:Name="PR"  Width="200" Height="200" />
+		<Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="432,183,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" />
+		<TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="387,155,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" />
+
+	</Grid>
 </Window>
