--- a/Xmas-Installer/MainWindow.xaml
+++ b/Xmas-Installer/MainWindow.xaml
@@ -1,16 +1,27 @@
-﻿<Window x:Class="Xmas_Installer.MainWindow"
+﻿<Window x:Name="Main"
+		x:Class="Xmas_Installer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Xmas_Installer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" WindowStyle="None" Background="Black">
-    <Grid>
+        Title="MainWindow" Height="350" Width="525" WindowStyle="None" Background="Black" AllowsTransparency="True" MouseLeftButtonDown="OnMouseLeftButtonDown">
+
+	<Window.Triggers>
+		<EventTrigger RoutedEvent="Rectangle.Loaded">
+			<BeginStoryboard>
+				<Storyboard>
+					<DoubleAnimation Storyboard.TargetName="Main" Storyboard.TargetProperty="Height" From="0" To="350" Duration="0:0:0.5" />
+				</Storyboard>
+			</BeginStoryboard>
+		</EventTrigger>
+	</Window.Triggers>
+
+	<Grid>
         
 		<local:ProgressRing x:Name="PR"  Width="200" Height="200" />
-		<Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="432,183,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" />
-		<TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="387,155,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" />
+		<local:CloseButton HorizontalAlignment="Right" VerticalAlignment="Top" MouseLeave="OnMouseLeave" />
 
 	</Grid>
 </Window>
