--- a/Xmas-Installer/CloseButton.xaml
+++ b/Xmas-Installer/CloseButton.xaml
@@ -5,18 +5,39 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Xmas_Installer"
              mc:Ignorable="d" 
-             d:DesignHeight="25" d:DesignWidth="30" Background="{x:Null}" Width="30" Height="25">
+             d:DesignHeight="25" d:DesignWidth="30" Background="{x:Null}" Width="35" Height="30">
 	<UserControl.Resources>
 		<Storyboard x:Key="SBOnMouseEnter">
 			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="rectangle">
-				<EasingColorKeyFrame KeyTime="0" Value="Transparent"/>
-				<EasingColorKeyFrame KeyTime="0:0:0.3" Value="#26FFFFFF"/>
+				<EasingColorKeyFrame KeyTime="0" Value="#FFE81123"/>
+			</ColorAnimationUsingKeyFrames>
+			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" Storyboard.TargetName="path">
+				<EasingColorKeyFrame KeyTime="0" Value="White"/>
+			</ColorAnimationUsingKeyFrames>
+			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" Storyboard.TargetName="path1">
+				<EasingColorKeyFrame KeyTime="0" Value="White"/>
 			</ColorAnimationUsingKeyFrames>
 		</Storyboard>
 		<Storyboard x:Key="SBOnMouseLeave">
 			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="rectangle">
-				<EasingColorKeyFrame KeyTime="0" Value="#26FFFFFF"/>
-				<EasingColorKeyFrame KeyTime="0:0:0.3" Value="Transparent"/>
+				<EasingColorKeyFrame KeyTime="0" Value="#FFE81123"/>
+				<EasingColorKeyFrame KeyTime="0:0:0.2" Value="#00E81123"/>
+			</ColorAnimationUsingKeyFrames>
+			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="rectangledown">
+				<EasingColorKeyFrame KeyTime="0" Value="Transparent"/>
+			</ColorAnimationUsingKeyFrames>
+			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" Storyboard.TargetName="path">
+				<EasingColorKeyFrame KeyTime="0" Value="White"/>
+				<EasingColorKeyFrame KeyTime="0:0:0.2" Value="Black"/>
+			</ColorAnimationUsingKeyFrames>
+			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" Storyboard.TargetName="path1">
+				<EasingColorKeyFrame KeyTime="0" Value="White"/>
+				<EasingColorKeyFrame KeyTime="0:0:0.2" Value="Black"/>
+			</ColorAnimationUsingKeyFrames>
+		</Storyboard>
+		<Storyboard x:Key="SBOnMouseDown">
+			<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="rectangledown">
+				<EasingColorKeyFrame KeyTime="0" Value="#66FFFFFF"/>
 			</ColorAnimationUsingKeyFrames>
 		</Storyboard>
 	</UserControl.Resources>
@@ -25,15 +46,18 @@
 			<BeginStoryboard x:Name="SBOnMouseEnter_BeginStoryboard" Storyboard="{StaticResource SBOnMouseEnter}"/>
 		</EventTrigger>
 		<EventTrigger RoutedEvent="UIElement.MouseLeave">
-			<BeginStoryboard x:Name="SBOnMouseLeave_BeginStoryboard" Storyboard="{StaticResource SBOnMouseLeave}"/>
+			<BeginStoryboard x:Name="SBOnMouseLeave_BeginStoryboard1" Storyboard="{StaticResource SBOnMouseLeave}"/>
 		</EventTrigger>
-		<EventTrigger RoutedEvent="UIElement.MouseDown"/>
+		<EventTrigger RoutedEvent="UIElement.MouseLeftButtonDown">
+			<BeginStoryboard x:Name="SBOnMouseDown_BeginStoryboard" Storyboard="{StaticResource SBOnMouseDown}"/>
+		</EventTrigger>
 	</UserControl.Triggers>
 	<Grid>
 
-		<Rectangle x:Name="rectangle" Fill="#00000000" />
-		<Path Data="M24.916667,8.1666667 L34.999666,16.416334" Stretch="Fill" Stroke="White" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="10" Height="10" />
-		<Path Data="M36.666667,8.4166667 L26.583001,16.583" Stretch="Fill" Stroke="White" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="10" Height="10" />
+		<Rectangle x:Name="rectangle" Fill="#00E81123" />
+		<Rectangle x:Name="rectangledown" Fill="#00FF0000" />
+		<Path x:Name="path" Data="M24.916667,8.1666667 L34.999666,16.416334" Stretch="Fill" Stroke="Black" StrokeThickness="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="10" Height="10" />
+		<Path x:Name="path1" Data="M36.666667,8.4166667 L26.583001,16.583" Stretch="Fill" Stroke="Black" StrokeThickness="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="10" Height="10" />
 
 	</Grid>
 </UserControl>
